[gd_scene load_steps=5 format=3 uid="uid://dsu3l4lt7sx1n"]

[ext_resource type="Script" path="res://PlayerBody.gd" id="1_fe14q"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6v5x8"]

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_443mq"]
length = 5.0

[sub_resource type="SphereMesh" id="SphereMesh_kycks"]

[node name="Player" type="Node3D"]

[node name="PlayerBody" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.45872, 0)
script = ExtResource("1_fe14q")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerBody"]
shape = SubResource("CapsuleShape3D_6v5x8")

[node name="MainCamera" type="Camera3D" parent="PlayerBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.688291, 0)
current = true

[node name="Area3D" type="Area3D" parent="PlayerBody/MainCamera"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerBody/MainCamera/Area3D"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
shape = SubResource("SeparationRayShape3D_443mq")

[node name="GrabbingPointer" type="Marker3D" parent="PlayerBody/MainCamera/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.679402, -0.612735, -1.10048)

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerBody/MainCamera/Area3D/GrabbingPointer"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0)
visible = false
mesh = SubResource("SphereMesh_kycks")

[connection signal="body_entered" from="PlayerBody/MainCamera/Area3D" to="PlayerBody" method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="PlayerBody/MainCamera/Area3D" to="PlayerBody" method="_on_area_3d_body_exited"]
